Changelog for Yii User Management Module since Version 0.3

New in 0.6:
Features:
- Added Layout for installation

Bug Fixes:
- Changed UserModule::$returnUrl UserModule::$returnLogoutUrl calls to Yii::app()->controller->module->returnUrl/returnLogoutUrl (steve)
- Fixed the fallback table name in the ProfileField Model (steve)
- Fixed the incorrect URL generations in user/modules/role/views/role/admin.php view (steve)

New in 0.5:
- Added Polish messages translaction (Beta, please submit mistakes) (darek.krk)
- It is possible to pass valid callback function for passwords hashing in module configuraction (as default md5 will be used) (darek.krk) 
- Password should not be pre-populated in user update form (darek.krk)
- Fixed profile table name get method when creating or deleting profile fields (darek.krk)
- Updated french translation Messages (christophe.hurpeau)
- Added optional salt to Password encryption (darek.krk)
- Refactored User registration and Password recovery Process (thyseus)
- fixed the way Models retrieve their tablename so it works even when not
- in module context (steve, thyseus)
- started to begin submodularized infrastructure. see docs/submodules.txt (thyseus)
- Profile submodule now allows to have multiple profiles for an user, with the last one being the default.
- Role submodule now has the possibility to assing 'slave' users to users. This way you can define an user hierarchy that defines which users can administrate which users (thyseus)
- Added a checkbox whether to install Demo Data in installation Form (thyseus)
- Deleting users now deletes profiles, too (reported by rmlodzki) (thyseus)
- Repaired registration process (thyseus)
- Added Profile Privacy field (protected/private/public) (thyseus)
- Added $readOnlyProfiles to UserModule configuration. If this is set, only the
administrators of the given user can update the profile (thyseus)
- Added $forceProtectedProfiles to UserModule configuration. If this is set,